Inplementado sistema de toggle no menu, criada mais uma section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container show">
+      <nav class="container">
         <a class="logo" href="#">Indic<span>Arts</span>.</a>
         <div class="menu">
           <ul class="grid">
@@ -62,7 +62,17 @@
 
       <section class="section" id="about">
         <div class="container grid">
-          Sobre
+          <div class="image">
+            <img src="https://images.pexels.com/photos/5641832/pexels-photo-5641832.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Estudio de criação">
+          </div>
+          <div class="text">
+            <h2 class="title">A IndicArt.</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam doloremque illum molestiae quo, voluptatem sequi dolorum sapiente reiciendis neque non ea, laudantium, consectetur velit inventore adipisci minima fugit expedita similique?</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, cupiditate expedita magni repudiandae aliquid dolore asperiores incidunt sequi minus ab soluta libero reiciendis tempore ipsa nostrum aspernatur, eveniet quia error.</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum voluptas voluptates vitae, sed maxime, quisquam iure iste quas voluptate ducimus, eos commodi nam ut possimus. Ipsam provident esse obcaecati cupiditate?</p>
+          </div>
         </div>
       </section>
 
@@ -74,5 +84,7 @@
       
     </main>
     <footer></footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
